--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -1,15 +1,19 @@
-- name: Authentication
-  description: ""
-  image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-authentication-2.png
+- name: Getting Started
+  description: A getting started page for APIs is all about getting the new and potential
+    API consumer up to speed with what it takes to get started with an API. This is
+    my research to track on the different approaches, and aggregate into a single
+    approach I can apply to my own APIs, as well as share along the way. I have started
+    crafting an API to help me organize all of it, so stay tuned.
+  image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png
   x-open-ranking: "0"
   tags:
-  - Authentication
+  - Getting Started
   created: "2016-04-03"
   modified: "2016-04-03"
   url: ""
   specificationVersion: "0.14"
   apis:
-  - name: API Evangelist - Authentication API
+  - name: API Evangelist Getting Started API
     description: This is my professional presence as the API Evangelist, where I work
       to better understand the world of APIs. Im always working towards a better understanding
       of how they are being used, both the good and the bad, across the technology,
@@ -18,7 +22,7 @@
     humanURL: ""
     baseURL: http://api.apievangelist.com
     tags:
-    - Authentication
+    - Getting Started
     properties:
     - type: x-openapi-spec
       url: api-commons/openapi-spec.json
@@ -63,7 +67,7 @@
     url: https://twitter.com/apievangelist
   include:
   - name: Parent
-    url: http://authentication.apievangelist.com/apis.yaml
+    url: http://getting-started.apievangelist.com/apis.yaml
   maintainers:
   - FN: Kin Lane
     x-twitter: apievangelist
