--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:        Getting Started
 url:          http://getting-started.apievangelist.com
-logo:         http://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-400.png.png
-logo_width:   80
+logo:         http://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-getting-started.png
+logo_width:   70
 logo_bottom_padding: 10
 version:      1.1.1
 author:
