--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: /:categories/:year/:month/:day/:title/
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 paginate: 150
-paginate_path: "/news/page:num"
+paginate_path: "/news/page:num/"
 
 categories_path : /categories.html
 tags_path : /tags.html
@@ -46,7 +46,7 @@ project_summary: A getting started page for APIs is all about getting the new an
 # Navigation
 navigation:
   - label1: Home
-    link1: /index.html
+    link1: /
     size1: 80
     extend: 0
     label2:
