--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -68,17 +68,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: b0e32439ab2db18978c96ce85c3637e4
-  item_date: "2016-09-23 00:00:00"
-  title: SoundCloud now makes developers apply for API access
-  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
-  domain: venturebeat.com
-  image: ""
 - curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
   item_date: "2016-09-23 00:00:00"
   title: 'Slack 101: Onboarding'
   url: https://slackhq.com/slack-101-onboarding-247454704155
   domain: slackhq.com
+  image: ""
+- curated_id: b0e32439ab2db18978c96ce85c3637e4
+  item_date: "2016-09-23 00:00:00"
+  title: SoundCloud now makes developers apply for API access
+  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
+  domain: venturebeat.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -121,5 +121,23 @@
   title: IBM Provides Developer Kits to Jumpstart Working with Watson
   url: http://www.programmableweb.com/news/ibm-provides-developer-kits-to-jumpstart-working-watson/brief/2016/11/10
   domain: www.programmableweb.com
+  image: ""
+- curated_id: aTKLPW9AeQAh09DpOW/0/mK2tQUNNgIyAi3xy7MVsb4=_15c65e46569:65e80bf:cfb784e9
+  item_date: "2017-06-01 11:45:57"
+  title: Why your API onboarding sucks and what you can do to improve it
+  url: https://medium.com/apinf/why-your-api-onboarding-sucks-and-what-you-can-do-to-improve-it-7fbb2920b06b
+  domain: medium.com
+  image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15cd343a845:1c22c0:661f1d99
+  item_date: "2017-06-22 09:48:46"
+  title: Four Minute Guide to Get Up & Running with the Clover REST API
+  url: https://medium.com/p/9df412038748
+  domain: medium.com
+  image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15cdd909051:123fd5:35f03cd7
+  item_date: "2017-06-24 01:08:39"
+  title: "How do I generate a TrackingMore API key\uFF1F"
+  url: https://medium.com/p/3f91be91fea1
+  domain: medium.com
   image: ""
 ...
