--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: b0e32439ab2db18978c96ce85c3637e4
-  item_date: "2016-09-23 00:00:00"
-  title: SoundCloud now makes developers apply for API access
-  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
-  domain: venturebeat.com
-  image: ""
 - curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
   item_date: "2016-09-23 00:00:00"
   title: 'Slack 101: Onboarding'
   url: https://slackhq.com/slack-101-onboarding-247454704155
   domain: slackhq.com
+  image: ""
+- curated_id: b0e32439ab2db18978c96ce85c3637e4
+  item_date: "2016-09-23 00:00:00"
+  title: SoundCloud now makes developers apply for API access
+  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
+  domain: venturebeat.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -124,7 +124,7 @@
   image: ""
 - curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15cd343a845:1c22c0:661f1d99
   item_date: "2017-06-22 09:48:46"
-  title: Four Minute Guide to Get Up & Running with the Clover REST API
+  title: Four Minute Guide to Get Up &amp; Running with the Clover REST API
   url: https://medium.com/p/9df412038748
   domain: medium.com
   image: ""
