--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
-  item_date: "2016-09-23 00:00:00"
-  title: 'Slack 101: Onboarding'
-  url: https://slackhq.com/slack-101-onboarding-247454704155
-  domain: slackhq.com
-  image: ""
 - curated_id: b0e32439ab2db18978c96ce85c3637e4
   item_date: "2016-09-23 00:00:00"
   title: SoundCloud now makes developers apply for API access
   url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
   domain: venturebeat.com
+  image: ""
+- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
+  item_date: "2016-09-23 00:00:00"
+  title: 'Slack 101: Onboarding'
+  url: https://slackhq.com/slack-101-onboarding-247454704155
+  domain: slackhq.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -132,6 +132,12 @@
   item_date: "2017-06-24 01:08:39"
   title: "How do I generate a TrackingMore API key\uFF1F"
   url: https://medium.com/p/3f91be91fea1
+  domain: medium.com
+  image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15d12e963b5:a60ca6:bb404dd5
+  item_date: "2017-07-05 06:08:38"
+  title: Customizing a user signup workflow in WSO2 API Manager
+  url: https://medium.com/p/c0f0b0ab3933
   domain: medium.com
   image: ""
 ...
