--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: b0e32439ab2db18978c96ce85c3637e4
-  item_date: "2016-09-23 00:00:00"
-  title: SoundCloud now makes developers apply for API access
-  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
-  domain: venturebeat.com
-  image: ""
 - curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
   item_date: "2016-09-23 00:00:00"
   title: 'Slack 101: Onboarding'
   url: https://slackhq.com/slack-101-onboarding-247454704155
   domain: slackhq.com
+  image: ""
+- curated_id: b0e32439ab2db18978c96ce85c3637e4
+  item_date: "2016-09-23 00:00:00"
+  title: SoundCloud now makes developers apply for API access
+  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
+  domain: venturebeat.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -139,5 +139,17 @@
   title: Customizing a user signup workflow in WSO2 API Manager
   url: https://medium.com/p/c0f0b0ab3933
   domain: medium.com
+  image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15d624c5ba3:123f0ec:898d1914
+  item_date: "2017-07-20 10:41:56"
+  title: 'Clearbit Risk API: Monitor fraudulent sign'
+  url: https://medium.com/p/8dbd49556320
+  domain: medium.com
+  image: ""
+- curated_id: qhhWIcDYC9w26Atz2YPVGWlZ3ijpzn6VVyZmZhvr38o=_15d6552279b:f5cda9:8fa6dd97
+  item_date: "2017-07-21 06:01:37"
+  title: How to Design a Better Onboarding Experience
+  url: https://www.sparkpost.com/?p=31455
+  domain: www.sparkpost.com
   image: ""
 ...
