Updating _data/curated/index.yaml via Laneworks CMS Publish

--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -152,4 +152,16 @@
   url: https://www.sparkpost.com/?p=31455
   domain: www.sparkpost.com
   image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15d76cd3e6a:f4b20:6c0c5382
+  item_date: "2017-07-24 06:41:09"
+  title: "Research plan: API onboarding process \u2014 common elements"
+  url: https://medium.com/p/580b7ac57061
+  domain: medium.com
+  image: ""
+- curated_id: rq6OKKgBiWVp88vsVvs1lxEDBZExs+csk5yWEsrvsaE=_15d7ac42d56:2b31c9d:53d642ee
+  item_date: "2017-07-24 17:00:00"
+  title: Introducing the New Honeycomb Quick Start
+  url: https://honeycomb.io/blog/2017/07/introducing-the-new-honeycomb-quick-start/
+  domain: honeycomb.io
+  image: ""
 ...
