--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
-  item_date: "2016-09-23 00:00:00"
-  title: 'Slack 101: Onboarding'
-  url: https://slackhq.com/slack-101-onboarding-247454704155
-  domain: slackhq.com
-  image: ""
 - curated_id: b0e32439ab2db18978c96ce85c3637e4
   item_date: "2016-09-23 00:00:00"
   title: SoundCloud now makes developers apply for API access
   url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
   domain: venturebeat.com
+  image: ""
+- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
+  item_date: "2016-09-23 00:00:00"
+  title: 'Slack 101: Onboarding'
+  url: https://slackhq.com/slack-101-onboarding-247454704155
+  domain: slackhq.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -174,6 +174,12 @@
   item_date: "2017-09-19 05:06:02"
   title: Apply for the Friends+Me API early access program
   url: https://medium.com/p/96aa9c39f915
+  domain: medium.com
+  image: ""
+- curated_id: FZ/2GLZp/a8FriFm6BqxYgMelBuYPP5oD17BctyF8kM=_15f36aa6bf5:6a77b0:626ab4cd
+  item_date: "2017-10-19 07:06:15"
+  title: 5 steps to API frustration
+  url: https://medium.com/p/5562c5d124ce
   domain: medium.com
   image: ""
 ...
