--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: b0e32439ab2db18978c96ce85c3637e4
-  item_date: "2016-09-23 00:00:00"
-  title: SoundCloud now makes developers apply for API access
-  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
-  domain: venturebeat.com
-  image: ""
 - curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
   item_date: "2016-09-23 00:00:00"
   title: 'Slack 101: Onboarding'
   url: https://slackhq.com/slack-101-onboarding-247454704155
   domain: slackhq.com
+  image: ""
+- curated_id: b0e32439ab2db18978c96ce85c3637e4
+  item_date: "2016-09-23 00:00:00"
+  title: SoundCloud now makes developers apply for API access
+  url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
+  domain: venturebeat.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -199,5 +199,11 @@
   title: 3scale Developer Portal signup flows
   url: https://developers.redhat.com/blog/?p=441786
   domain: developers.redhat.com
+  image: ""
+- curated_id: /nF/YWkHiuackzrydqXDCsc7DAaVQPLQJZlxS4iGK2E=_161038ca0d3:44549a9:3c0bb656
+  item_date: "2018-01-17 01:40:58"
+  title: Removing barriers to API adoption, for everyone
+  url: https://tyk.io/?p=23564
+  domain: tyk.io
   image: ""
 ...
