--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -62,17 +62,17 @@
   url: https://dzone.com/articles/announcing-the-nginx-plus-on-aws-cloud-quick-start
   domain: dzone.com
   image: ""
-- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
-  item_date: "2016-09-23 00:00:00"
-  title: 'Slack 101: Onboarding'
-  url: https://slackhq.com/slack-101-onboarding-247454704155
-  domain: slackhq.com
-  image: ""
 - curated_id: b0e32439ab2db18978c96ce85c3637e4
   item_date: "2016-09-23 00:00:00"
   title: SoundCloud now makes developers apply for API access
   url: http://venturebeat.com/2016/09/23/soundcloud-now-makes-developers-apply-for-api-access/
   domain: venturebeat.com
+  image: ""
+- curated_id: f5f92083a7ab90991cf32cac7dd5ebd4
+  item_date: "2016-09-23 00:00:00"
+  title: 'Slack 101: Onboarding'
+  url: https://slackhq.com/slack-101-onboarding-247454704155
+  domain: slackhq.com
   image: ""
 - curated_id: 634fba06f89c26a411f1284bcc91b1ad
   item_date: "2016-10-12 00:00:00"
@@ -205,5 +205,11 @@
   title: Removing barriers to API adoption, for everyone
   url: https://tyk.io/?p=23564
   domain: tyk.io
+  image: ""
+- curated_id: g8yFv8q12UnL70ldUa6MmrcjpJr9X+r0IN92Ot48m8g=_161bf7db0d6:b01da81:3c0bb656
+  item_date: "2018-02-22 10:56:00"
+  title: Self
+  url: https://blog.periscopedata.com/blog/self-service-doesnt-equal-self-sufficiency
+  domain: blog.periscopedata.com
   image: ""
 ...
